docs: refine beta roadmap and design docs
Clarify that lathe-design documents stable architecture and mechanics while roadmap owns feature status. Add planned design notes for launcher JVM options, call hierarchy, and beta architecture/test cleanup. Update beta scope to cover all known code-action gaps, including reactor type-index freshness for missing imports.